Changes in about text and added more weather info

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site was created by Aadarsh.It uses mapbox and darksky to fetch location and weather details</p>
             <img class="portrait" src='/img/me.jpg'>
         </div>
        
