--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -8,17 +8,19 @@
     <body>
         <div class="main-content">
             {{>header}}
-            <p>Get weather for your location</p>
+            <p>Hey! Himangini how's you it's been long time i have seen you, try this out Get weather for your location</p>
             <form>
                 <input placeholder="Location">
                 <button>Search</button>
             </form>
-
+            <p id="message-0"></p>
             <p id="message-1"></p>
             <p id="message-2"></p>
         </div>
  
+        <img class='portrait' src='/img/himangini.jpg'>
         {{>footer}}
         <script src='/js/app.js'></script>
+        
     </body>
 </html>
