--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -8,7 +8,7 @@
     <body>
         <div class="main-content">
             {{>header}}
-            <p>Hey! Himangini how's you it's been long time i have seen you, try this out Get weather for your location</p>
+            <p>Hey! Himangini 😇 how's you it's been long time i have seen you, try this out Get weather for your location</p>
             <form>
                 <input placeholder="Location">
                 <button>Search</button>
